[package]
name = "aws-crossing"
version = "0.1.3"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
async-trait = "0.1.40"
colored = "2.0.0"
env_logger = "0.7.1"
futures = "0.3.5"
log = "0.4.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "0.1.1"
structopt = "0.3"
tokio = { version = "0.2", features = ["macros", "process", "rt-threaded"] }
